--- a/source/inbound_function/tsconfig.json
+++ b/source/inbound_function/tsconfig.json
@@ -8,7 +8,7 @@
     "strict": true,
     "skipLibCheck": true,
     "outDir": "./dist/",
-    "rootDir": "./src"
+    "rootDir": "./src",
   },
   "include": ["src/**/*"]
 }
