--- a/source/inbound_function/package.json
+++ b/source/inbound_function/package.json
@@ -16,7 +16,8 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.97",
     "@types/node": "^17.0.36",
-    "ts-node": "^10.8.0",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.2"
   }
 }
